style: corrects spacing in Project pages

--- a/src/styles/components/ProjectCard.css
+++ b/src/styles/components/ProjectCard.css
@@ -110,6 +110,7 @@
 @media only screen and (max-width: 768px) {
   .project-container {
     height: auto;
+    width: 90%;
   }
 
   .project-description {
